# leetcode-1672

./: CMakeLists.txt  build-and-run.sh
incl/: problem.h
src/: main.c  problem.c
